gcc/testsuite/gfortran.dg/pr91715.f90
! { dg-do compile }
! PR fortran/91715
! Code contributed Gerhard Steinmetz
character(1function f()  ! { dg-error "Syntax error in CHARACTER" }
end
